--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
     <title>Rock Paper Scissors</title>
 </head>
 <body>
-
+    <h1>Rock - Paper - Scissors Game</h1>
+    <h2>First who wins 5 rounds, is the winner</h2>
+    <hr>
     <button id="rock">Rock</button>
     <button id="paper">Paper</button>
     <button id="scissors">Scissors</button>
